<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <!-- Authentication Screen (Optional entry point) -->
    <fragment
        android:id="@+id/authFragment"
        android:name="com.saveourwater.ui.auth.AuthFragment"
        android:label="Login"
        tools:layout="@layout/fragment_auth">
        <action
            android:id="@+id/action_authFragment_to_homeFragment"
            app:destination="@id/nav_home"
            app:popUpTo="@id/authFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_home"
        android:name="com.saveourwater.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home">
        <!-- Action to go to auth screen -->
        <action
            android:id="@+id/action_homeFragment_to_authFragment"
            app:destination="@id/authFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_tracking"
        android:name="com.saveourwater.ui.tracking.TrackingFragment"
        android:label="@string/nav_tracking"
        tools:layout="@layout/fragment_tracking" />

    <fragment
        android:id="@+id/nav_achievements"
        android:name="com.saveourwater.ui.achievements.AchievementsFragment"
        android:label="@string/nav_achievements"
        tools:layout="@layout/fragment_achievements" />

    <fragment
        android:id="@+id/nav_insights"
        android:name="com.saveourwater.ui.insights.InsightsFragment"
        android:label="@string/nav_insights"
        tools:layout="@layout/fragment_insights" />

</navigation>

